# go2_simulation

./: .gitignore  CSV_organizer.py  README.md  commands.txt
Data/: extract_bags.py  plot_data.py  plot_processed_data.py  process_data.py  run_experiments.py
Data/Real/Control_mode_1/: config.yaml  processed_data.csv
Data/Real/Control_mode_2/: config.yaml  processed_data.csv
Data/Real/Control_mode_3/: config.yaml  processed_data.csv
Data/Real/Control_mode_4/: config.yaml  processed_data.csv
Data/Sim/Control_mode_1/: config.yaml  extracted_data.csv  processed_data.csv
Data/Sim/Control_mode_2/: config.yaml  extracted_data.csv  processed_data.csv
Data/Sim/Control_mode_3/: config.yaml  extracted_data.csv  processed_data.csv
Data/Sim/Control_mode_4/: config.yaml  plot_config.yaml  processed_data.csv
cpp_topic/: CMakeLists.txt  package.xml
cpp_topic/src/: cpp_topic_publisher_spiral.cpp
go2_actuator/: CMakeLists.txt  go2_actuator.xml  package.xml
go2_actuator/include/go2_actuator/: go2_actuator.hpp
go2_actuator/src/: go2_actuator.cpp
go2_controller/: CMakeLists.txt  package.xml
go2_controller/include/go2_controller/: go2_controller.hpp
go2_controller/src/: go2_controller.cpp
go2_description/: CMakeLists.txt  package.xml
go2_description/config/: go2.yaml  go2_real.yaml  go2_sim.yaml
go2_description/gz/: gz.xacro
go2_description/launch/: go2.launch.py
go2_description/rviz/: go2.rviz
go2_description/urdf/: go2.xacro  go2.xacro.urdf  leg.xacro  ros2_control.xacro  sensors.xacro  torso.xacro
go2_description/worlds/: empty_world.sdf
go2_gzsim/: CMakeLists.txt  package.xml
go2_gzsim/launch/: go2.launch.py
go2_gzsim/worlds/: empty_world.sdf
go2_jointcontroller/: CMakeLists.txt  go2_jointcontroller.xml  package.xml
go2_jointcontroller/include/go2_jointcontroller/: go2_jointcontroller.hpp
go2_jointcontroller/src/: go2_jointcontroller.cpp  test_pinocchio.cpp
go2_jointcontroller/unitree_sdk2/: CMakeLists.txt
go2_lowstates/: CMakeLists.txt  package.xml
go2_lowstates/include/go2_lowstates/: go2_lowstates.hpp
go2_lowstates/src/: go2_lowstates.cpp
go2_real/: CMakeLists.txt  package.xml
go2_real/launch/: go2.launch.py  go2.launch_robot.py  go2.operator.launch.py  go2.robot.launch.py
go2_refs/: CMakeLists.txt  package.xml
go2_refs/src/: go2_refs.cpp
go2_remap/: CMakeLists.txt  package.xml
go2_remap/include/go2_remap/: go2_remap.hpp
go2_remap/src/: go2_pointcloud_republisher.cpp  go2_remap_topic.cpp
unitree/cyclonedds_ws/src/unitree/unitree_api/: CMakeLists.txt
unitree/cyclonedds_ws/src/unitree/unitree_go/: CMakeLists.txt
unitree/cyclonedds_ws/src/unitree/unitree_hg/: CMakeLists.txt
unitree/unitree_ros2/: CMakeLists.txt  package.xml
unitree/unitree_ros2/include/: go2_motion_switch_client.hpp
unitree/unitree_ros2/include/common/: base_client.hpp
