<?xml version="1.0"?>
<package format="3">
  <name>go2_description</name>
  <version>0.1.0</version>
  <description>The URDF/Xacro description package for the GO2 quadrupedal robot</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>