<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_real</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mobilab@todo.todo">mobilab</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_msgs</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>go2_description</depend>
  <exec_depend>go2_remap</exec_depend>


  <!-- Export information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
