<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_remap</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mobilab@todo.todo">mobilab</maintainer>
  <license>TODO: License declaration</license>

<!-- Dependencies required at build and runtime -->
  <depend>ament_cmake</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <depend>tf2_sensor_msgs</depend>
  <depend>unitree_go</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <!-- Buildtool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Export the package -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
